Fix breadcrumbs
- Responsiveness: Fix overlapping
- Accessibility: Add role and include in nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,9 +65,11 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
   background-color: #252831;
-  text-align:center;
+  text-align: center;
+}
+.nav-primary {
+	height: 80px;
 }
 nav h1 {
   margin: auto;
@@ -79,34 +81,30 @@ nav h1 a {
   letter-spacing: 10px;
   text-transform: uppercase;
 }
+.nav-breadcrumb {
+	text-align: left;
+	background-color: #eee;
+	margin: 0;
+	width: 100%;
+}
 #breadcrumb {
-    padding: 10px 40px 16px;
-		list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-    /*width: calc(50% - 80px);*/
-		width: 100%;
+	list-style: none;
+	margin: 0;
+	padding: 15px 10px;
+	display: flex;
+	flex-wrap: wrap;
 }
-
-/* Display list items side by side */
-#breadcrumb li {
-    display: inline;
-}
-
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
     padding: 8px;
     color: black;
     content: "/\00a0";
 }
-
 /* Add a color to all links inside the list */
 #breadcrumb li a {
     color: #0275d8;
     text-decoration: none;
 }
-
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
     color: #01447e;
